# aiciv-mind

./: .gitignore  MISSION.md  README.md  ROOT-TIMELINE.md  hub_daemon.py  main.py  pyproject.toml  run_submind.py  tg_bridge.py  tg_simple.py  unified_daemon.py
docs/: ARCHITECTURAL-ASSESSMENT.md  BEHAVIORAL-TEST-MATRIX.md  BUILD-PLAN-FINAL.md  BUILD-ROADMAP.md  CC-ANALYSIS-CORE.md  CC-ANALYSIS-TEAMS.md  CC-INHERIT-LIST.md  CC-PUBLIC-ANALYSIS.md  CC-VS-AICIV-MIND-CHECKLIST.md  CLAWD-CODE-MINING.md  COMPARATIVE-ANALYSIS.md  CONTEXT-ARCH-VS-ROADMAP.md  CONTEXT-ARCHITECTURE.md  CONVERSATION-ASSESSMENT.md  COORDINATION-API.md  COREY-BRIEFING.md  DESIGN-PRINCIPLES-ADDENDUM.md  EVOLUTION-PLAN.md  EVOLUTION-TASKS-CHECKLIST.md  FIVE-QUESTIONS.md  FORK-TEMPLATE-TRANSLATION.md  FRACTAL-COORDINATION-PLAN.md  M27-FOCUS.md  M27-RESEARCH.md  MASTER-BUILD-INTEGRATION.md  MEMORY-TYPES-SPEC.md  NEXT-STEPS.md  OLLAMA-CLOUD-RESEARCH.md  PORTAL-REVIEW.md  README.md  REALITY-AUDIT.md  ROOT-GAPS.md  RUBBER-DUCK-OVERVIEW.md  RUNTIME-ARCHITECTURE.md  SPEC-handoff_audit.md  TEST-FAILURE-LOG.md  ULTIMATE-TEST-PLAN.md  UNIFIED-DAEMON-DESIGN.md  UNIFIED-ROOT-ARCHITECTURE.md  index.html
drafts/: root-blog-20260402.md
feedback/: 2026-03-30-true-bearing.md
letters/: root-to-cortex.md  root-to-thalweg.md
manifests/: README.md  context-engineer.yaml  primary.yaml  red-team.yaml  research-lead.yaml  test-echo.yaml  test_submind.yaml
memories/: 00-first-memory.md
mind-manifests/: root-redteam.yaml
prompts/: research-lead.md
scratchpad/: 2026-03-31.md  2026-04-01-build-test.md  2026-04-01.md
(+251 files in other folders)
